--- a/style.css
+++ b/style.css
@@ -421,6 +421,13 @@ textarea{
   color: #cff8f0;
   border: none;
 }
+.button:hover{
+  background-color: #94cdc4;
+  color: #000000;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #35d1e1;
+}
 .adr{
   position: absolute;
   top: 118px;
